# camcal

./: .gitignore  README.md  pyproject.toml
examples/: README.md  board.yaml  generate_board.py
src/camcal/: __init__.py  _capture_loop.py  calibrate_extrinsics.py  calibrate_intrinsics.py  camera.py  charuco.py  intrinsics.py  io_yaml.py  list_cameras.py  pnp.py  se3.py
tests/: test_camera.py  test_intrinsics_synthetic.py  test_io_yaml.py  test_list_cameras.py  test_pnp_synthetic.py  test_se3.py
