[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camcal"
version = "0.1.0"
description = "ChArUco-based camera intrinsics and world-frame extrinsics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cyfine" }]

dependencies = [
    "numpy>=1.24",
    "opencv-contrib-python>=4.8",
    "pyyaml>=6",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
camcal-intrinsics = "camcal.calibrate_intrinsics:main"
camcal-extrinsics = "camcal.calibrate_extrinsics:main"
camcal-list-cameras = "camcal.list_cameras:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"camcal" = ["py.typed"]
